--- a/package.json
+++ b/package.json
@@ -7,9 +7,13 @@
     "eject": "expo eject"
   },
   "dependencies": {
+    "@expo/vector-icons": "^9.0.0",
     "expo": "^32.0.0",
     "react": "16.5.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz"
+    "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
+    "native-base": "^2.11.0",
+    "react-native-image-zoom-viewer": "^2.2.25",
+    "react-navigation": "^3.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
