--- a/app.json
+++ b/app.json
@@ -25,8 +25,6 @@
       "**/*"
     ],
     "ios": {
-      "bundleIdentifier": "",
-      "buildNumber": "0.1",
       "icon": "./assets/icon.png",
       "appStoreUrl": "https://itunes.apple.com/fr/app/allocin%C3%A9-cin%C3%A9ma-et-s%C3%A9ries/id351184863?mt=8",
       "supportsTablet": false,
@@ -38,27 +36,15 @@
         "NSLocationWhenInUseUsageDescription" : "Location is required to find nearest cinemas",
         "NSLocationAlwaysUsage" : "Location is required to find nearest cinemas"
       },
-      "usesIcloudStorage": false,
-      "config": {
-        "googleMapsApiKey": ""
-      }
+      "usesIcloudStorage": false
     },
     "androidStatusBarColor": "#303a59",
     "androidStatusBar": {
       "barStyle": "dark-content",
       "backgroundColor": "#303a59"
     },
-    "notification": {
-      "icon": "./assets/notification-icon.png",
-      "color": "#303a59",
-      "androidMode": "default",
-      "androidCollapsedTitle": "PopCorn"
-    },
     "android": {
-      "package": "",
-      "versionCode": 3,
       "icon": "./assets/icon.png",
-      "playStoreUrl": "",
       "permissions": [
         "ACCESS_COARSE_LOCATION",
         "ACCESS_FINE_LOCATION",
