Ajout des news + detail news

--- a/app.json
+++ b/app.json
@@ -74,7 +74,7 @@
         }
       },
       "splash": {
-        "backgroundColor": "#303a59",
+        "backgroundColor": "#ffffff",
         "resizeMode": "contain"
       }
     },
