--- a/package.json
+++ b/package.json
@@ -13,9 +13,7 @@
     "react": "16.5.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-32.0.0.tar.gz",
     "react-native-image-zoom-viewer": "^2.2.25",
-    "react-navigation": "^3.3.0",
-    "react-redux": "^7.1.0",
-    "redux": "^4.0.1"
+    "react-navigation": "^3.3.0"
   },
   "devDependencies": {
     "babel-preset-expo": "^5.0.0"
